# powered-descent-lab

./: Cargo.toml  README.md
docs/: architecture.md  early_design.md  guidance.md  progress.md  roadmap.md  terminal_suite.md  transfer_suite.md
fixtures/packs/: core_suite.json  experimental_terrain_backstop_full.json  experimental_terrain_backstop_suite.json  terminal_bot_lab_full.json  terminal_bot_lab_suite.json  terminal_compare_baseline_fixture.json  terminal_compare_regression_fixture.json  terminal_reactive_terrain_full.json  terminal_reactive_terrain_suite.json  terminal_sweep_suite.json  terminal_traj_err_full.json  terminal_traj_err_suite.json  transfer_bot_lab_pathwise_compare.json  transfer_bot_lab_recoverability_compare.json  transfer_bot_lab_suite.json  transfer_radius_tier_suite.json  transfer_rneg80_radius_focus_suite.json  transfer_route_angle_pathwise_compare.json  transfer_route_angle_radius_frontier_full.json  transfer_route_angle_radius_full_solved.json  transfer_route_angle_radius_suite.json  transfer_route_angle_recoverability_compare.json  transfer_route_angle_suite.json  transfer_waypoint_bend_contract_rpos80_full.json  transfer_waypoint_bend_contract_rpos80_smoke.json  transfer_waypoint_bend_rpos80_full.json  transfer_waypoint_bend_rpos80_smoke.json  transfer_waypoint_contract_rpos80_full.json  transfer_waypoint_contract_rpos80_smoke.json  transfer_waypoint_rpos80_full.json  (+19 more)
pd-cli/: Cargo.toml
pd-control/: Cargo.toml
pd-core/: Cargo.toml
pd-eval/: Cargo.toml
pd-report/: Cargo.toml
scripts/: render_terminal_suite.py  serve-reports
(+48 files in other folders)
