[workspace]
members = [
  "pd-core",
  "pd-control",
  "pd-cli",
  "pd-eval",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
